chapter-4/exercise-3.3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-app
  template:
    metadata:
      labels:
        app: ping-app
    spec:
      volumes:
        - name: config-map-volume
          configMap:
            name: ping-app-cm
      containers:
        - name: ping-app
          image: ismayilkarimli/devops-with-kubernetes:3.3-ping
          imagePullPolicy: Always
        - name: log-app
          image: ismayilkarimli/devops-with-kubernetes:3.3-log
          imagePullPolicy: Always
          volumeMounts:
            - name: config-map-volume
              mountPath: /etc/config
              readOnly: true
