chapter-4/exercise-3.3/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ping-app-route
spec:
  parentRefs:
    - name: ping-app-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /log
      backendRefs:
        - name: ping-app-svc
          port: 2345
    - matches:
      - path:
          type: PathPrefix
          value: /pingpong
      backendRefs:
        - name: ping-app-svc
          port: 2346
